fixed alignment inside the card

--- a/app/assets/stylesheets/components/_pigeon_card.scss
+++ b/app/assets/stylesheets/components/_pigeon_card.scss
@@ -165,9 +165,9 @@ a {
   background-color: $green;
   padding: 0.5rem;
   border-radius: 50%;
-  position: relative;
+  position: absolute;
   bottom: 0.3rem;
-  right: -0.4rem;
+  right: 0.4rem;
   margin-bottom: 0px;
 }
 
